name:           tesths
version:        0.2.2.1
synopsis:       A lightweight testing framework for Haskell
description:    Please see the README on Github at <https://github.com/tpapak/tesths#readme>
category:       Testing
homepage:       https://github.com/tpapak/tesths#readme
bug-reports:    https://github.com/tpapak/tesths/issues
author:         Thodoris Papakonstantinou
maintainer:     dev@tpapak.com
copyright:      2026 Thodoris Papakonstantinou
license:        LGPL-3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/tpapak/tesths

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , ansi-terminal >=0.6 && <2
  exposed-modules:
      TestHS
  default-language: Haskell2010
