name:           tesths
version:        0.2.2.1
synopsis:       A lightweight testing framework for Haskell
description:
    A minimal pure-functional test harness.  Build a list of @Test@ values
    using 'testPassed' and 'testFailed', then report results with
    'reportTests' (pure tests) or 'reportTestsIO' (IO tests).
    Exits with failure if any test fails.
    See the README on Github at <https://github.com/tpapak/tesths#readme>.
category:       Testing
homepage:       https://github.com/tpapak/tesths#readme
bug-reports:    https://github.com/tpapak/tesths/issues
author:         Thodoris Papakonstantinou
maintainer:     dev@tpapak.com
copyright:      2026 Thodoris Papakonstantinou
license:        LGPL-3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/tpapak/tesths

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <4.21
    , ansi-terminal >=0.6 && <1.2
  exposed-modules:
      TestHS
  default-language: Haskell2010
